# image-stitching

./: CMakeLists.txt  README.md  group.cpp  group.h  main.cpp  stitch.cpp  stitch.h
detect/: edge.cpp  edge.h  sift.cpp  sift.h
util/: base.cpp  base.h  filter.cpp  filter.h
